# agentic-cosync

./: .gitignore  Cargo.toml  README.md  package-lock.json  pnpm-lock.yaml  replit.md  replit.nix
.agents/memory/: MEMORY.md  cosync-tauri-build.md
.github/workflows/: build-desktop.yml
.migration-backup/: .replit  package.json
.migration-backup/cosync/: .gitignore  README.md
.migration-backup/cosync/apps/desktop/: package-lock.json
.migration-backup/cosync/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
.migration-backup/cosync/apps/desktop/src-tauri/src/: commands.rs  state.rs
.migration-backup/cosync/apps/desktop/src/hooks/: useCosync.ts
.migration-backup/cosync/crates/core/src/: clipboard.rs  envelope.rs  error.rs  lib.rs  notification.rs  state.rs  storage.rs
.migration-backup/cosync/proto/: cosync.proto
.migration-backup/src/app/: layout.tsx
apps/desktop/: package-lock.json  package.json  postcss.config.mjs
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: ClipboardPanel.tsx  FileTransferPanel.tsx
apps/desktop/src/hooks/: useCosync.ts
apps/desktop/src/lib/: commands.ts
artifacts/cosync/: index.html  package.json
artifacts/cosync/.replit-artifact/: artifact.toml
artifacts/cosync/src/: App.tsx
artifacts/cosync/src/app/: page.tsx
artifacts/web/: package.json
artifacts/web/.replit-artifact/: artifact.toml
artifacts/web/src/: index.css
artifacts/web/src/app/: layout.tsx
attached_assets/: Pasted--1s-Sun-19-Jul-2026-01-34-53-GMT-Node-20-is-being-depre_1784425071299.txt  Pasted--Compiling-x509-parser-v0-17-0-Compiling-rand-v0-8-7-Co_1784427129716.txt
cosync/: Cargo.toml  README.md
cosync/apps/desktop/: index.html  package-lock.json  package.json
cosync/apps/desktop/src/: App.tsx  styles.css
cosync/apps/desktop/src-tauri/: Cargo.toml
cosync/apps/desktop/src-tauri/src/: commands.rs  lib.rs  state.rs
cosync/apps/desktop/src/components/: ClipboardPanel.tsx  FileTransferPanel.tsx  ui.tsx
cosync/apps/desktop/src/hooks/: useCosync.ts
cosync/apps/desktop/src/lib/: commands.ts
cosync/apps/desktop/src/types/: events.ts
cosync/crates/core/: build.rs
cosync/crates/core/src/: discovery.rs  file_transfer.rs  identity.rs  pairing.rs  session.rs  transport.rs
crates/core/: Cargo.toml
crates/core/src/: hlc.rs  identity.rs  lib.rs  session.rs  storage.rs  wire.rs
docs/: architecture.md  getting-started.md  protocol.md
src/app/: page.tsx
tool-results/: bash_1784351133121_ea5a52e34df1.txt  bash_1784503659824_d24dc2aa86d1.txt  bash_1784508880297_c20731f5e68f.txt
