[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/desktop/src-tauri",
]

# ── Shared dependency versions ────────────────────────────────────────────────
# All crates in this workspace should inherit from here rather than specifying
# their own versions, so the lockfile stays coherent.

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Network / transport
quinn  = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
webpki-roots = "1"

# mDNS / discovery
mdns-sd = "0.12"

# Cryptographic identity
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rcgen          = { version = "0.13", features = ["x509-parser"] }
x509-parser    = "0.17"
sha2           = "0.10"

# Wire format
prost = "0.13"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Clipboard
arboard = "3"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand       = "0.8"
hex        = "0.4"
thiserror  = "2"
once_cell  = "1"
tempfile   = "3"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
