[workspace]
resolver = "2"
members = ["crates/core", "apps/desktop/src-tauri"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
mdns-sd = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
x509-parser = "0.17"
tempfile = "3"
webpki-roots = "1"
rustls-pki-types = "1"