[package]
name = "cosync-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Cosync — LAN device sync via QUIC"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
mobile-bindings = ["uniffi"]

[dependencies]
tokio = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
mdns-sd = { workspace = true }
ed25519-dalek = { workspace = true }
rusqlite = { workspace = true }
arboard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
x509-parser = { workspace = true }
tempfile = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
uniffi = { version = "0.29", optional = true }

[build-dependencies]
prost-build = "0.13"